RV64IMA for Cora

--- a/cora/Makefile
+++ b/cora/Makefile
@@ -29,7 +29,7 @@ UBOOT_CONFIG = zynq_coraz7
 
 UBOOT_DTS = zynq-coraz7
 
-RISCV_CORE_ARCH = RV64IMAFD
+RISCV_CORE_ARCH = RV64IMA
 
 RISCV_CORE_CONFIG = ZynqSmallFPGAConfig
 
